--- a/RentalPropertyAnalyzer/Views/Home/Index.cshtml
+++ b/RentalPropertyAnalyzer/Views/Home/Index.cshtml
@@ -12,8 +12,32 @@
 
 
 
+
+
 <body id="page-top">
 
+    @section StatsSection
+{
+    <!-- Saved Properties Count -->
+<div class="col-xl-3 col-md-6 mb-4">
+    <div class="card border-left-info shadow h-100 py-2">
+        <div class="card-body">
+            <div class="row no-gutters align-items-center">
+                <div class="col mr-2">
+                    <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                        Sarai's' Properties
+                    </div>
+                    <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.SavedPropertiesCount</div>
+                                            
+                </div>
+                <div class="col-auto">
+                    <i class="fas fa-home fa-2x text-gray-300"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+}
     <!-- Page Wrapper -->
     <div id="wrapper">
 
@@ -31,25 +55,7 @@
                     <div class="row">
 
 
-                        <!-- Saved Properties Count -->
-                        <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-info shadow h-100 py-2">
-                                <div class="card-body">
-                                    <div class="row no-gutters align-items-center">
-                                        <div class="col mr-2">
-                                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
-                                                Sarai's' Properties
-                                            </div>
-                                            <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.SavedPropertiesCount</div>
-                                            
-                                        </div>
-                                        <div class="col-auto">
-                                            <i class="fas fa-home fa-2x text-gray-300"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
 
 
                     <!-- Content Row -->
